tests/ui/consts/const-eval/erroneous-const2.stderr
error[E0080]: evaluation of `PrintName::<i32>::VOID` failed
  --> $DIR/erroneous-const2.rs:6:22
   |
LL |     const VOID: () = [()][2];
   |                      ^^^^^^^ index out of bounds: the length is 1 but the index is 2

note: erroneous constant used
  --> $DIR/erroneous-const2.rs:13:9
   |
LL |         PrintName::<i32>::VOID;
   |         ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
